<resources>
    <string name="app_name">Guess The Animal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_button_text">Play</string>
    <string name="picture_4_contentdesc">Picture of fourth animal</string>
    <string name="sound_button">Play sound</string>
    <string name="load_button">Load next animals</string>
    <string name="text_congrats">Congratulations!\n Your score is:</string>
    <string name="good_answers">Number of good answers:</string>
    <string name="bad_answers">Number of bad answers:</string>
    <string name="final_score_text">Your final score:</string>
    <string name="play_again_button_text">Play again</string>
    <string name="sound_button_toast">Play sound!</string>
    <string name="application_name">Guess the animal</string>
</resources>